creación de la primera pagina con HTML

--- a/HolaMundoHTML/public_html/index.html
+++ b/HolaMundoHTML/public_html/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+
+<html>  
     <head>
-        <title>TODO supply a title</title>
+        <title>
+            Hola con HTML
+        </title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Esto es un comentario para un warning-->
+        <link rel="icon" href="data:;base64, iVBORw0KGgo=">
     </head>
     <body>
-        <div>TODO write content</div>
+        Hola mundo con HTML
     </body>
 </html>
