Creación de la cabecera del html, ademas del titulo de la etiqueta

--- a/HTML/LecciónUno/index.html
+++ b/HTML/LecciónUno/index.html
@@ -1,3 +1,15 @@
+<!--Garantizamos que sea la ultima versión de HTML-->
+<!DOCTYPE html>
 <html>
-    
+    <!--Esto es la cabecera del html-->
+    <head>
+        <!--Esto es lo que se va a visualizar en el titulo de la pestaña-->
+        <title>
+            Universidad HTMl
+        </title>
+    </head>
+    <!--Este es el cuerpo del html que estamos utilizando-->
+    <body>
+
+    </body>
 </html>
