--- a/HTML/LecciónUno/index.html
+++ b/HTML/LecciónUno/index.html
@@ -1,15 +1,17 @@
-<!--Garantizamos que sea la ultima versión de HTML-->
+<!--Garantizamos que sea la ultima versión de HTML de información HTML-->
 <!DOCTYPE html>
+<!--Inicio de todo el documento-->
 <html>
-    <!--Esto es la cabecera del html-->
+    <!--Esto es la cabecera del html, head = cabecera-->
     <head>
         <!--Esto es lo que se va a visualizar en el titulo de la pestaña-->
-        <title>
-            Universidad HTMl
-        </title>
+        <title>Universidad HTMl</title>
     </head>
-    <!--Este es el cuerpo del html que estamos utilizando-->
+    <!--body = cuerpo. Este es el cuerpo del html que estamos utilizando-->
     <body>
-
+        <!--Heading = titulo-->
+        <h1>Curso de Universidad HTML</h1>
+        <!--Paragraph = parrafo-->
+        <p>Mi primer pagina HTML</p>
     </body>
 </html>
