uso de etiquetas meta para el tipo de caracteres que pueden soportar la pagina web

--- a/HTML/LeccionUno/index.html
+++ b/HTML/LeccionUno/index.html
@@ -1,3 +1,8 @@
+<!--HTML = Hypertext Markup Language-->
+<!--CSS = Cascading Style Sheets-->
+<!--JavaScript = lenguaje de programación-->
+<!--URL Uniform Resource Locator-->
+
 <!--Garantizamos que sea la ultima versión de HTML de información HTML-->
 <!DOCTYPE html>
 <!--Inicio de todo el documento-->
@@ -6,12 +11,14 @@
     <head>
         <!--Esto es lo que se va a visualizar en el titulo de la pestaña-->
         <title>Universidad HTMl</title>
+        <!--Tipo de caracteres que soporta la página web, solo se cierrra con daigonal-->
+        <meta charset="UTF-8"/>
     </head>
     <!--body = cuerpo. Este es el cuerpo del html que estamos utilizando-->
     <body>
         <!--Heading = titulo-->
         <h1>Curso de Universidad HTML</h1>
         <!--Paragraph = parrafo-->
-        <p>Mi primer pagina HTML</p>
+        <p>Mi primer página HTML</p>
     </body>
 </html>
