Comando para crear el código html desde VisualCode

--- a/HTML/LeccionUno/index.html
+++ b/HTML/LeccionUno/index.html
@@ -7,18 +7,35 @@
 <!DOCTYPE html>
 <!--Inicio de todo el documento-->
 <html>
-    <!--Esto es la cabecera del html, head = cabecera-->
-    <head>
-        <!--Esto es lo que se va a visualizar en el titulo de la pestaña-->
-        <title>Universidad HTMl</title>
-        <!--Tipo de caracteres que soporta la página web, solo se cierrra con daigonal-->
-        <meta charset="UTF-8"/>
-    </head>
-    <!--body = cuerpo. Este es el cuerpo del html que estamos utilizando-->
-    <body>
-        <!--Heading = titulo-->
-        <h1>Curso de Universidad HTML</h1>
-        <!--Paragraph = parrafo-->
-        <p>Mi primer página HTML</p>
-    </body>
+  <!--Esto es la cabecera del html, head = cabecera-->
+  <head>
+    <!--Esto es lo que se va a visualizar en el titulo de la pestaña-->
+    <title>Universidad HTMl</title>
+    <!--Tipo de caracteres que soporta la página web, solo se cierrra con daigonal-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <!--body = cuerpo. Este es el cuerpo del html que estamos utilizando-->
+  <body>
+    <!--Heading = titulo-->
+    <h1>Curso de Universidad HTML</h1>
+    <!--Paragraph = parrafo-->
+    <p>Mi primer página HTML</p>
+  </body>
 </html>
+<!--
+Con el uso de ! + tabulador se genera este código
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+-->
