--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elementos Básicos HTML</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Titulos de cabecera hasta h6-->
+    <!--Esto es titulo h1-->
+    <h1>Título h1</h1>
+    <!--Esto es titulo h2-->
+    <h2>Título h2</h2>
+    <!--Esto es título h3-->
+    <h3>Título h3</h3>
+    <!--Esto es título h34-->
+    <h4>Título h4</h4>
+    <!--Esto es título h5-->
+    <h5>Título h5</h5>
+    <!--Esto es título h6-->
+    <h6>Título h6</h6>
+  </body>
 </html>
