--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -7,18 +7,16 @@
     <title>Elementos Básicos HTML</title>
   </head>
   <body>
-    <!--Titulos de cabecera hasta h6-->
     <!--Esto es titulo h1-->
-    <h1>Título h1</h1>
-    <!--Esto es titulo h2-->
-    <h2>Título h2</h2>
-    <!--Esto es título h3-->
-    <h3>Título h3</h3>
-    <!--Esto es título h34-->
-    <h4>Título h4</h4>
-    <!--Esto es título h5-->
-    <h5>Título h5</h5>
-    <!--Esto es título h6-->
-    <h6>Título h6</h6>
+    <h1>Universidad HTML</h1>
+    <!--Parrafos en HTMl-->
+
+    <!--br = break line: salto de línea-->
+    <p>Primera línea del parrafor <br/> segunda línea del parrafo</p>    
+    <!--hr = horizontal rule= Línea horizontal-->
+    <hr/>
+    <p>Segundo parrafo</p>
+
+  
   </body>
 </html>
