Creación de una nueva pagina, asi como poder pasar a dicha información

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -9,14 +9,16 @@
   <body>
     <!--Esto es titulo h1-->
     <h1>Universidad HTML</h1>
-    <!--Parrafos en HTMl-->
-
-    <!--br = break line: salto de línea-->
-    <p>Primera línea del parrafor <br/> segunda línea del parrafo</p>    
-    <!--hr = horizontal rule= Línea horizontal-->
-    <hr/>
-    <p>Segundo parrafo</p>
-
-  
+    <!--uso de links con a-->
+    <!--a = anchor: ancla-->
+    <!--Lo que se encuentra entre la etiqueta es lo que se va observar en el navegador-->
+    <!--Atributos href para la dirección URL de la pagina a visitar-->
+    <!--atributo target para poder abrir en una nueva ventana-->
+    <a href="https://www.youtube.com"
+    target="_blank">
+      Sitio de youtube 
+    </a>
+    <br />
+    <a href="paginaUno.html">Ir a la página uno</a>
   </body>
 </html>
