Creacon de la carpeta de imagenes y utilización de imagenes desde el proyecto y desde un servidor

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -9,16 +9,18 @@
   <body>
     <!--Esto es titulo h1-->
     <h1>Universidad HTML</h1>
-    <!--uso de links con a-->
-    <!--a = anchor: ancla-->
-    <!--Lo que se encuentra entre la etiqueta es lo que se va observar en el navegador-->
-    <!--Atributos href para la dirección URL de la pagina a visitar-->
-    <!--atributo target para poder abrir en una nueva ventana-->
-    <a href="https://www.youtube.com"
-    target="_blank">
-      Sitio de youtube 
-    </a>
-    <br />
-    <a href="paginaUno.html">Ir a la página uno</a>
+    <!--Uso de las imagenes-->
+    <!--Etiqueta img= image: imagen-->
+    <!--src para el recurso hacia donde se hace referencia-->
+    <!--alt cuando no se puede cargar una imagen aparezca un texto-->
+    <!--width ancho de la imagen que estemos cargando-->
+    <!--haigth alto de la imagen que se esta cargando-->
+    <img src="imagenes/html5.png" alt="Imagen HTML" width="100px"/>
+    <!--Imagenes desde un servidor-->
+    <img src="http://globalmentoring.com.mx/imagenes/css3.png" alt="Imagen CSS3" width="100px"/>
+    <!--Inserción de imagen o ruta no correcta-->
+    <img src="http://globalmentoring.com.mx/imagenes/javascript.jpg" alt="Imagen JavaScript" width="100px"/>
+    <!--Imagen con la ruta correcta-->
+    <img src="http://globalmentoring.com.mx/imagenes/javascript.png" alt="Imagen JavaScript" width="100px"/>
   </body>
 </html>
