--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -8,19 +8,27 @@
   </head>
   <body>
     <!--Esto es titulo h1-->
-    <h1>Universidad HTML</h1>
+    <h1 style="color: blue">Universidad HTML</h1>
     <!--Uso de las imagenes-->
     <!--Etiqueta img= image: imagen-->
+    <!--USO DE ATRIBUTOS DE LA IMAGEN-->
     <!--src para el recurso hacia donde se hace referencia-->
     <!--alt cuando no se puede cargar una imagen aparezca un texto-->
     <!--width ancho de la imagen que estemos cargando-->
-    <!--haigth alto de la imagen que se esta cargando-->
-    <img src="imagenes/html5.png" alt="Imagen HTML" width="100px"/>
-    <!--Imagenes desde un servidor-->
-    <img src="http://globalmentoring.com.mx/imagenes/css3.png" alt="Imagen CSS3" width="100px"/>
-    <!--Inserción de imagen o ruta no correcta-->
-    <img src="http://globalmentoring.com.mx/imagenes/javascript.jpg" alt="Imagen JavaScript" width="100px"/>
-    <!--Imagen con la ruta correcta-->
-    <img src="http://globalmentoring.com.mx/imagenes/javascript.png" alt="Imagen JavaScript" width="100px"/>
+    <!--heigth alto de la imagen que se esta cargando-->
+    <!--title se usa para cuando el cursor encima de la imagen-->
+    <!--style para darle tamaño, color o estilo a la fuente-->
+    <img
+      src="imagenes/html5.png"
+      alt="Imagen HTML"
+      width="100px"
+      title="Logo HTML"
+    />
+    <p title="Nuevo parrafo" style="color: red">Este es un nuevo parrafo</p>
+    <!--Respeta el parrafo o estilo del texto-->
+    <pre>
+      Esto es un 
+      nuevo párrafo
+    </pre>
   </body>
 </html>
