Creacion de estilos en html, para una etiqueta de titulo

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elementos Básicos HTML</title>
   </head>
-  <body>
+  <!--Style para el fondo de una pagina web-->
+  <body style="background-color:powderblue;">
     <!--Esto es titulo h1-->
-    <h1 style="color: blue">Universidad HTML</h1>
+    <!--Para se-->
+    <h1 style="color: blue; font-size: 50px; font-family: fantasy;">Universidad HTML</h1>
     <!--Uso de las imagenes-->
     <!--Etiqueta img= image: imagen-->
     <!--USO DE ATRIBUTOS DE LA IMAGEN-->
