formato de texto en html

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -7,30 +7,17 @@
     <title>Elementos Básicos HTML</title>
   </head>
   <!--Style para el fondo de una pagina web-->
-  <body style="background-color:powderblue;">
+  <body>
     <!--Esto es titulo h1-->
     <!--Para se-->
-    <h1 style="color: blue; font-size: 50px; font-family: fantasy;">Universidad HTML</h1>
-    <!--Uso de las imagenes-->
-    <!--Etiqueta img= image: imagen-->
-    <!--USO DE ATRIBUTOS DE LA IMAGEN-->
-    <!--src para el recurso hacia donde se hace referencia-->
-    <!--alt cuando no se puede cargar una imagen aparezca un texto-->
-    <!--width ancho de la imagen que estemos cargando-->
-    <!--heigth alto de la imagen que se esta cargando-->
-    <!--title se usa para cuando el cursor encima de la imagen-->
-    <!--style para darle tamaño, color o estilo a la fuente-->
-    <img
-      src="imagenes/html5.png"
-      alt="Imagen HTML"
-      width="100px"
-      title="Logo HTML"
-    />
-    <p title="Nuevo parrafo" style="color: red">Este es un nuevo parrafo</p>
-    <!--Respeta el parrafo o estilo del texto-->
-    <pre>
-      Esto es un 
-      nuevo párrafo
-    </pre>
+    <h1>Universidad HTML</h1>
+    <!--Uso de la etiqueta b para darle color negrita al texto-->
+    <p><b>Mi primer página HTML</b></p>
+    <!--Esta etiqueta contiene un texto importante "strong"-->
+    <p><strong>Segundo párrafo</strong> </p>
+    <!--Uso de italica con la etiqueta i-->
+    <p><i>Tercer párrafo</i></p>
+    <!--Similar al anterior pero con la diferencia de enfatizar, significa diferencite-->
+    <p><em>Cuarto párrafo</em></p>
   </body>
 </html>
