Creación de estilos de texto en html

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -17,7 +17,15 @@
     <p><strong>Segundo párrafo</strong> </p>
     <!--Uso de italica con la etiqueta i-->
     <p><i>Tercer párrafo</i></p>
-    <!--Similar al anterior pero con la diferencia de enfatizar, significa diferencite-->
+    <!--Similar al anterior pero con la diferencia de enfatizar, significa diferencie-->
     <p><em>Cuarto párrafo</em></p>
+    <!--Subraya el parrafo o elimina el texto-->
+    <p><del>Séptimo párrafo</del></p>
+    <!--Subraya el texto que se esta implementando-->
+    <p><ins>Octavo párrafo</ins></p>
+    <!--Realiza un subindice en la letra o palabra que se esta realizando-->
+    <p>noveno <sub>p</sub>arrafo H<sub>2</sub>O</p>
+    <!--Superindice de una palabra o letra de un texto-->
+    <p>Décimo <sup>p</sup>árrafo</p>
   </body>
 </html>
