Referecias de texto en html con sus respectivas claves hexadecimales como se tiene que visualizar

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -6,26 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elementos Básicos HTML</title>
   </head>
-  <!--Style para el fondo de una pagina web-->
   <body>
     <!--Esto es titulo h1-->
-    <!--Para se-->
     <h1>Universidad HTML</h1>
-    <!--Uso de la etiqueta b para darle color negrita al texto-->
-    <p><b>Mi primer página HTML</b></p>
-    <!--Esta etiqueta contiene un texto importante "strong"-->
-    <p><strong>Segundo párrafo</strong> </p>
-    <!--Uso de italica con la etiqueta i-->
-    <p><i>Tercer párrafo</i></p>
-    <!--Similar al anterior pero con la diferencia de enfatizar, significa diferencie-->
-    <p><em>Cuarto párrafo</em></p>
-    <!--Subraya el parrafo o elimina el texto-->
-    <p><del>Séptimo párrafo</del></p>
-    <!--Subraya el texto que se esta implementando-->
-    <p><ins>Octavo párrafo</ins></p>
-    <!--Realiza un subindice en la letra o palabra que se esta realizando-->
-    <p>noveno <sub>p</sub>arrafo H<sub>2</sub>O</p>
-    <!--Superindice de una palabra o letra de un texto-->
-    <p>Décimo <sup>p</sup>árrafo</p>
+    <!--Cambio de la fuente de un texto-->
+    <p><code>Este es mi código</code></p>
+    <!--Simbolos de html de https://dev.w3.org/html5/html-author/charref -->
+    <p>&beta; Símbolo de beta</p>
+    <p>&#x003B2; Símbolo de beta con hexadecimal</p>
+    <p>&#946; Símbolo beta con decimal</p>
+    <p>&Eopf;&Copf;&Dopf;&Aopf;</p>
+    <p>&lt; simbolo de menor que</p>
+    <p>&gt; simbolo de mayor que</p>
+    <p>&commat; simbolo de arroba</p>
+    <!--Esto se hace por el hecho de que se puede presentar problemas con los caracteres-->
   </body>
 </html>
