--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elementos Básicos HTML</title>
+    <title>Universidad HTML</title>
   </head>
   <body>
     <!--Esto es titulo h1-->
     <h1>Universidad HTML</h1>
-    <!--Cambio de la fuente de un texto-->
-    <p><code>Este es mi código</code></p>
-    <!--Simbolos de html de https://dev.w3.org/html5/html-author/charref -->
-    <p>&beta; Símbolo de beta</p>
-    <p>&#x003B2; Símbolo de beta con hexadecimal</p>
-    <p>&#946; Símbolo beta con decimal</p>
-    <p>&Eopf;&Copf;&Dopf;&Aopf;</p>
-    <p>&lt; simbolo de menor que</p>
-    <p>&gt; simbolo de mayor que</p>
-    <p>&commat; simbolo de arroba</p>
-    <!--Esto se hace por el hecho de que se puede presentar problemas con los caracteres-->
+  <hr>
+  <p> <a href="index.html">Inicio</a> | <a href="Contacto.html">Contacto</a> | <a href="Acerdade.html">Acerca de</a></p>
+  <p>Bienvenidos al curso de Universidad HTMl</p>
   </body>
 </html>
