implementacioń de email para su respectivo envio a correo que se encuentre configurado en la maquina

--- a/HTML/Carpeta de ejercicio/Acerdade.html
+++ b/HTML/Carpeta de ejercicio/Acerdade.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Acerca de Raúl Ramírez Pérez</h1>
     <hr>
-    <p>Estudiante de Ingeniearía de Desarrollo en Software</p>
+    <p>Estudiante de Ingeniería de Desarrollo en Software</p>
     <p><a href="https://www.youtube.com/watch?v=mGv0ze0lHKA&list=RDMML-iepu3EtyE&index=6" target="_blank">Ir a Youtube</a></p>
+    <a href="mailto:ramssrez@gmail.com?subject=Contacto&body=prueba email">Enviar Email</a>
     <p><a href="index.html">Inicio</a></p>
 </body>
 </html>
