--- a/HTML/Carpeta de ejercicio/index.html
+++ b/HTML/Carpeta de ejercicio/index.html
@@ -9,8 +9,12 @@
   <body>
     <!--Esto es titulo h1-->
     <h1>Universidad HTML</h1>
-  <hr>
-  <p> <a href="index.html">Inicio</a> | <a href="Contacto.html">Contacto</a> | <a href="Acerdade.html">Acerca de</a></p>
-  <p>Bienvenidos al curso de Universidad HTMl</p>
+    <hr />
+    <a href="index.html">Inicio</a> 
+    | 
+    <a href="Contacto.html">Contacto</a>
+     |
+    <a href="Acerdade.html">Acerca de</a>
+    <p>Bienvenidos al curso de Universidad HTMl</p>
   </body>
 </html>
