Uso de colores en html ya sea desde nombre, rgb y rgba

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -7,10 +7,17 @@
     <title>Universidad HTML</title>
   </head>
   <body>
-    <!--Esto es titulo h1-->
+    <!--Uso de colores en html-->
     <h1>Universidad HTML</h1>
-  <hr>
-  <p> <a href="index.html">Inicio</a> | <a href="Contacto.html">Contacto</a> | <a href="Acerdade.html">Acerca de</a></p>
-  <p>Bienvenidos al curso de Universidad HTMl</p>
-  </body>
+    <!--Colores en html en https://htmlcolorcodes.com/es/nombres-de-los-colores/-->
+    <p style="color: crimson;">
+      Color por nombre
+    </p>
+    <!--r-red, g-green, b-blue-->
+    <p style="color: rgb(220, 20, 60);">
+      Color por rgb
+    </p>
+    <p style="border: 10px solid rgba(220,20,60,.5);">
+      Color rgba con transparencia
+    </p>
 </html>
