uso de colores para el codigo hsl con transparecia y hexadecimal con el mismo color

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -20,4 +20,13 @@
     <p style="border: 10px solid rgba(220,20,60,.5);">
       Color rgba con transparencia
     </p>
+    <p style="color: hsl(348, 83%, 47%);">
+      Color por codigo hsl
+    </p>
+    <p style="border: 10px solid hsla(348,83%,47%,1);">
+      Color hsla con transparencia
+    </p>
+    <p style="color: #dc143c;">
+      Color por hexadecinal
+    </p>
 </html>
