Uso de estilos css, desde un archivo independiente e ingresarlo dentro del html

--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -5,28 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Universidad HTML</title>
+    <!--Esto es para poder ponerle estilo a las atiquetas de html como inicio de CSS-->
+   <!--
+    Esto se puede usar desde otro archivo
+   <style>
+      h1{
+        color: darkblue;
+      }
+      p{
+        color:white;
+        background-color: crimson;
+      }
+
+    </style>
+    -->
+    <link rel="stylesheet" href="css/estilos.css"/>
   </head>
   <body>
     <!--Uso de colores en html-->
     <h1>Universidad HTML</h1>
-    <!--Colores en html en https://htmlcolorcodes.com/es/nombres-de-los-colores/-->
-    <p style="color: crimson;">
-      Color por nombre
-    </p>
-    <!--r-red, g-green, b-blue-->
-    <p style="color: rgb(220, 20, 60);">
-      Color por rgb
-    </p>
-    <p style="border: 10px solid rgba(220,20,60,.5);">
-      Color rgba con transparencia
-    </p>
-    <p style="color: hsl(348, 83%, 47%);">
-      Color por codigo hsl
-    </p>
-    <p style="border: 10px solid hsla(348,83%,47%,1);">
-      Color hsla con transparencia
-    </p>
-    <p style="color: #dc143c;">
-      Color por hexadecinal
-    </p>
+    <p>Bienvenido a CSS</p>  
+    <p>Saludos</p>
+    <a href="contenido.html">Ir a contenido</a>
 </html>
