--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="stylesheet" href="css/estilos.css"/>
   </head>
-  <body>
+  <body style="background-color: honeydew;">
     <!--Uso de colores en html-->
     <h1>Universidad HTML</h1>
     <p>Bienvenido a CSS</p>  
