--- a/HTML/LeccionDos/index.html
+++ b/HTML/LeccionDos/index.html
@@ -5,23 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Universidad HTML</title>
-    <!--Esto es para poder ponerle estilo a las atiquetas de html como inicio de CSS-->
-   <!--
-    Esto se puede usar desde otro archivo
-   <style>
-      h1{
-        color: darkblue;
-      }
-      p{
-        color:white;
-        background-color: crimson;
-      }
-
-    </style>
-    -->
     <link rel="stylesheet" href="css/estilos.css"/>
   </head>
-  <body style="background-color: honeydew;">
+  <body>
     <!--Uso de colores en html-->
     <h1>Universidad HTML</h1>
     <p>Bienvenido a CSS</p>  
