--- a/HTML/Lecciontres/index.html
+++ b/HTML/Lecciontres/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Links HTML</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <h1>Universidad HTML</h1>
+    <br>
+    <a href="contenido.html">Ir a contenido</a>
   </body>
 </html>
