--- a/HTML/Lecciontres/index.html
+++ b/HTML/Lecciontres/index.html
@@ -11,5 +11,10 @@
     <h1>Universidad HTML</h1>
     <br>
     <a href="contenido.html">Ir a contenido</a>
+    <br>
+    <a href="http://globalmentoring.com.mx" target="_blank">
+     <img src="http://globalmentoring.com.mx/imagenes/gm.png" alt="Logo GM"
+     style="width: 150px; height: 74px;"/>
+    </a>
   </body>
 </html>
