--- a/BootCampJava/index.html
+++ b/BootCampJava/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="main.js"></script> -->
+    <!-- <script src="main.js"></script>
     <script src="JS/prueba.js"></script>
+    <script src="JS/Ejercicio1.js"></script>
+    -->
+    <script src="JS/Ejercicio2.js"></script>
     <title>Document</title>
 </head>
 <body>
