Uso de ciclos e impresión

--- a/BootCampJava/index.html
+++ b/BootCampJava/index.html
@@ -7,8 +7,9 @@
     <!-- <script src="main.js"></script>
     <script src="JS/prueba.js"></script>
     <script src="JS/Ejercicio1.js"></script>
-    -->
     <script src="JS/Ejercicio2.js"></script>
+    -->
+    <script src="JS/ciclos.js"></script>
     <title>Document</title>
 </head>
 <body>
