--- a/carpetaUdemy/Servlets/JavaWeb/src/main/webapp/index.html
+++ b/carpetaUdemy/Servlets/JavaWeb/src/main/webapp/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ManejoCookies</title>
+        <title>Contador Visitas con Cookies</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Ejemplo de Cookies</h1>
-        <a href="/JavaWeb/CookiesServlet">Link para el manejo de cookies</a>
+        <h1>Contador con cookies</h1>
+        <a href="/JavaWeb/ContadorVisitasServlet">Servlet contador de visitas</a>
     </body>
 </html>
