--- a/carpetaUdemy/Servlets/JavaWeb/src/main/webapp/index.html
+++ b/carpetaUdemy/Servlets/JavaWeb/src/main/webapp/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contador Visitas con Cookies</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Contador con cookies</h1>
-        <a href="/JavaWeb/ContadorVisitasServlet">Servlet contador de visitas</a>
+        <div>TODO write content</div>
     </body>
 </html>
